--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ dependencies:
   image_picker: ^0.6.7+12
   date_format: ^1.0.9
   jiffy: ^3.0.1
-  firebase_core: ^1.0.0
+  firebase_core: ^0.7.0
   firebase_auth: ^0.20.0+1
   firebase_messaging: ^8.0.0-dev.14
   optimized_cached_image: ^1.0.0
@@ -76,7 +76,7 @@ dependencies:
   flurry_event: ^0.1.3
   shimmer: ^1.1.2
   animations: ^1.1.2
-  firebase_crashlytics: ^2.0.0
+  firebase_crashlytics: ^0.4.0+1
 dependency_overrides:
   intl: ^0.17.0
 
